7.1.0

 * Added support for multiple payment registration forms in sadmin

7.0.0

Dependencies

 * Now supports (and requires) Django 1.3
 * Updated South to 0.7.3
 * Updaged django-debug-toolbar to 0.8.5
 * Updated django-tinymce to 1.5.1a2

Refactoring

 * Now using django.contrib.staticfiles - update MEDIA_ROOT et.al. accordingly

Options and option groups

 * Selections in an option group can be locked for all accepted attendees

SAdmin

 * Improved sadmin menu organisation 
 * Various visual improvements

6.3.0

Vanilla Forum Integration:
 * Added support for default user roles
 * Added support for avatars and forum settings
 * Added support for synchronisation of user roles

6.2.0
 * Added categories for events
 * Various bugfixes

6.1.0
 * New login screen
 * New link directly from the event list to attendee list
 * Added graph of registrations to event statistics
 * Various bugfixes

6.0.0
 * Various usability improvements
 * Improved support for non-google chrome browsers
 * Improved SAdmin navigation
   * Breadcrumbs
   * Indication of the current page
   * Removed dropdown menus
   * Moved create menu items reducing clutter
 * Added quick check-in interface

Mailcenter:
 * Added option to send e-mails to other recipients than the target user
 * Added support for variables in e-mail subjects

5.0.0
 * Added new Selvbetjening Admin (SAdmin) interface, replacing the old admin interface
 * Improved mailcenter to support both mass e-mail and event triggered e-mails
 * Added integration with Vanilla forum 2
 * Refactoring of architecture
 * Removed a number of bundled dependencies from contrib in favour of a pip requirements file

4.1.0
 * Added price to suboptions

4.0.0
General:
 * Lots of small bugfixes and improvements
 * Removed own form rendering library in favor for django-uni-form
 * Added support for breadcrumbs

Logging:
 * Rewrote logging framework to use the database
 * Added admin interface
 * Added RSS interface

Admin: